add endpoints for register, login, profile and update profile
