# model/user.go
@@ -1,0 +1,10 @@
+package model
+
+type User struct {
+	ID          string
+	Name        string
+	PhoneNumber string
+	Password    string
+	CreatedAt   string
+	UpdatedAt   string
+}
